minor improvements for testing and a bugfix calculating the total for recent activities